# ggml-python

./: CMakeLists.txt  LICENSE.md  README.md  pyproject.toml
ggml/: __init__.py  ggml.py
