[build-system]
requires = ["scikit-build-core[pyproject]>=0.5.1"]
build-backend = "scikit_build_core.build"

[project]
name = "ggml_py"
dynamic = ["version"]
description = "Python bindings for ggml. Fork of the original project to use the latest version of ggml."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20.0",
    "typing_extensions>=4.6.3",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.scikit-build]
wheel.packages = ["ggml"]
wheel.expand-macos-universal-tags = true
cmake.verbose = true
cmake.minimum-version = "3.21"
minimum-version = "0.5.1"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "ggml/__init__.py"

[tool.pytest.ini_options]
addopts = "--ignore=vendor"
testpaths = "tests"

[project.optional-dependencies]
test = ["pytest"]
docs = ["mkdocs", "mkdocstrings[python]", "mkdocs-material", "pillow", "cairosvg"]
publish = ["build"]
convert = [
    "accelerate==0.30.1",
    "numpy==1.26.4",
    "sentencepiece==0.2.0",
    "torch==2.3.0",
    "torchaudio==2.3.0",
    "torchvision==0.18.0",
    "transformers==4.41.2"
]

[project.urls]
Homepage = "https://github.com/neuml/ggml-python"
Issues = "https://github.com/neuml/ggml-python/issues"
